# mandlebrot-gtk

./: .gdb_history  .gitignore  Cargo.toml  glade_layout.glade
src/: main.rs
