[package]
name = "mandlebrot"
version = "0.1.0"
authors = ["Piet Geursen <pietgeursen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-complex = "0.2.4"
ndarray = {version = "0.13", features = ["rayon"]}
png = "0.15"
glib = "0.9"
gdk = "0.12"

[dependencies.gdk-pixbuf]
version = "0.8.0"
features = ["v2_32"]


[dependencies.gtk]
version = "0.8.0"
features = ["v3_16"]

[dependencies.gio]
version = ""
features = ["v2_44"]
